--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     margin: 0;
     height: 100vh;
     display: flex;
@@ -76,4 +76,4 @@ body {
         width: 100%;
         height: auto;
     }
-}
+}*/
